--- a/net/ipv4/Kconfig
+++ b/net/ipv4/Kconfig
@@ -616,7 +616,7 @@ config DEFAULT_TCP_CONG
 	default "cubic"
 
 config TCP_ESTATS
-	bool "TCP: Extended TCP statistics (TCP ESTATS) MIB"
+	bool "TCP: Extended TCP statistics (RFC4898) MIB"
 	---help---
 	  Support for the TCP extended statistics MIB, RFC 4898
 	  (see http://www.web10g.org)
